--- a/wp-content/themes/duck-and-cover/assets/sass/elements/_elements.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/elements/_elements.scss
@@ -15,6 +15,8 @@ body {
     word-wrap: break-word;
     overflow-x: hidden;
     word-spacing: -1px;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 blockquote {
