--- a/wp-content/themes/duck-and-cover/assets/sass/main.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/main.scss
@@ -87,6 +87,9 @@
 @import "duck/front-page";
 @import "duck/our-story";
 @import "duck/blog";
+@import "duck/search-results";
+@import "duck/account";
+@import "duck/checkout";
 @import "duck/sliders";
 @import "duck/share-buttons";
 @import "duck/product";
