--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product-single.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_product-single.scss
@@ -17,7 +17,7 @@ body.boxed {
     }
 }
 .navigation-shop {
-    margin-bottom: 50px;
+    //margin-bottom: 50px;
     &.wide {
         padding-left: 20px;
         padding-right: 20px;
@@ -384,11 +384,16 @@ body.boxed {
 
 .product-socials-wrapper {
     //text-align: center;
-    margin: 20px 0;
+    margin: 50px 0 20px 0;
+    b {
+      color: #ccc;
+      font-size: 12px;
+    }
     span {
         display: block;
         text-transform: uppercase;
         font-size: 13px;
+        @extend .gibson-semibold;
     }
     a {
         padding: 0 15px;
