--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -1,24 +1,41 @@
 
-
-#sticky-promo-cta {
+.sticky-promo-cta-wrapper {
   position: fixed;
-  top: 57%;
+  top: 62%;
   right: -30px;
-  font-size: 14px;
+  z-index: 90;
+  opacity: 0;
+  transition: all .2s ease;
   -webkit-transform: rotate(90deg) translateX(-50%);
   -moz-transform: rotate(90deg) translateX(-50%);
   -o-transform: rotate(90deg) translateX(-50%);
   transform: rotate(90deg) translateX(-50%);
-  color: #d8120f;
-  @extend .gibson-semibold;
-  z-index: 999;
-  text-transform: uppercase;
-  opacity: 0;
-  transition: all .2s ease;
   &:hover {
     opacity: 1;
   }
+  #sticky-promo-cta {
+    font-size: 12px;
+    color: #d8120f;
+    @extend .gibson-light;
+    text-transform: uppercase;
+  }
+  i {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    padding-left: 10px;
+    vertical-align: middle;
+    .sticky-promo-close {
+      background-image: url(../img/x-out.png);
+      background-repeat: no-repeat;
+      background-size: 12px 12px;
+      width: 12px;
+      height: 12px;
+      display: block;
+    }
+  }
 }
+
 
 #duck-front-page {
 
@@ -64,36 +81,47 @@
 
     // Image area
     .single-featured-image-area {
-      width: 50%;
+      width: 100%;
+      @include media-breakpoint-up(md) {
+        width: 50%;
+      }
     }
 
     // Caption area
     .single-featured-caption-area {
       background: #d8d8d8;
-      width: 50%;
-      position: absolute;
-      top: 0;
-      left: 50%;
-      right: 0;
-      bottom: 0;
+      padding: 40px 20px;
+      @include media-breakpoint-up(md) {
+        width: 50%;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        right: 0;
+        bottom: 0;
+        padding: 0;
+      }
       .single-featured-product-caption {
-        @include centre;
         width: 100%;
-        max-width: 60%;
         text-align: center;
+        transform: scale(.8);
         h1 {
           color: #fff !important;
-          font-size: 52px !important;
+          font-size: 32px !important;
         }
         h3 {
           color: #4c4c4c !important;
-          font-size: 14px !important;
-          line-height: 14px !important;
+          font-size: 12px !important;
+          line-height: 12px !important;
           margin: 0 0 10px 0;
           @extend .gibson-light;
         }
         p {
           font-style: italic;
+        }
+        @include media-breakpoint-up(md) {
+          max-width: 60%;
+          @include centre;
+          transform: scale(1);
         }
       }
     }
