--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_our-story.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_our-story.scss
@@ -1,15 +1,33 @@
 #our-story {
   .our-story-header-image {
-  
+
   }
   .our-story-first-section {
-    padding: 100px 0;
+    padding: 20px 0;
+    @include media-breakpoint-up(sm) {
+      padding: 60px 0;
+    }
+    @include media-breakpoint-up(md) {
+      padding: 100px 0;
+    }
   }
   .our-story-second-section {
-    padding: 100px 0;
     background: #D8D8D8;
+    padding: 30px 0 20px 0;
+    @include media-breakpoint-up(sm) {
+      padding: 60px 0 40px 0;
+    }
+    @include media-breakpoint-up(md) {
+      padding: 100px 0;
+    }
   }
   .our-story-third-section {
-    padding: 100px 0;
+    padding: 30px 0 20px 0;
+    @include media-breakpoint-up(sm) {
+      padding: 60px 0;
+    }
+    @include media-breakpoint-up(md) {
+      padding: 100px 0;
+    }
   }
 }
