--- a/wp-content/themes/duck-and-cover/assets/sass/header/_header.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/header/_header.scss
@@ -23,7 +23,8 @@
   }
   #mobile-menu-toggle {
     color: #d8120f;
-    font-size: 20px;
+    font-size: 30px;
+    margin-left: 20px;
   }
   &.reduced-header {
     #logo {
@@ -89,6 +90,12 @@
     display: inline-block;
     .cart-contents {
         font-size: 12px;
+        display: block;
+        margin-top: -16px;
+        @include media-breakpoint-up(md) {
+          display: inline;
+          margin-top: 0;
+        }
     }
     .cart-icon {
       position: relative;
